--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -354,7 +354,7 @@
                                         </div>
                                         <div class="form-group" id="tituloc">
                                             <a href="" id="titulol" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar documento</a>
-                                            <label for="titulo" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
+                                            <label for="titulo" id="tituloa" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
                                             <input type="file" id="titulo" style="display:none;" />
                                         </div>
                                     </div>
@@ -450,7 +450,7 @@
                                         </div>
                                         <div class="form-group" id="solicitudc">
                                             <a href="" id="solicitudl" class="btn btn-sm btn-success"><i class="fa fa-download"></i></a>
-                                            <label for="solicitud" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
+                                            <label for="solicitud" id="solicituda" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
                                             <input type="file" id="solicitud" style="display:none;" />
                                         </div>
                                     </div>
@@ -462,7 +462,7 @@
                                         </div>
                                         <div class="form-group" id="contratoc">
                                             <a href="" id="contratol" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar documento</a>
-                                            <label for="contrato" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
+                                            <label for="contrato" id="contratoa" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
                                             <input type="file" id="contrato" style="display:none;" />
                                         </div>
                                     </div>
@@ -474,7 +474,7 @@
                                         </div>
                                         <div class="form-group" id="reivindicacionc">
                                             <a href="" id="reivindicacionl" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar documento</a>
-                                            <label for="reivindicacion" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
+                                            <label for="reivindicacion" id="reivindicaciona" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
                                             <input type="file" id="reivindicacion" style="display:none;" />
                                         </div>
                                     </div>
@@ -486,7 +486,7 @@
                                         </div>
                                         <div class="form-group" id="cartac">
                                             <a href="" id="cartal" class="btn btn-sm btn-success"><i class="fa fa-download"></i></a>
-                                            <label for="carta" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
+                                            <label for="carta" id="cartaa" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
                                             <input type="file" id="carta" style="display:none;" />
                                         </div>
                                     </div>
@@ -950,7 +950,7 @@
                                             <div class="form-group" id="oficioc">
                                                 @*<a href="" id="oficiol" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar documento</a>*@
                                                 <a href="" id="oficiol" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar</a>
-                                                <label for="oficio" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
+                                                <label for="oficio" id="oficioa" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
                                                 <input type="file" id="oficio" style="display:none;" />
                                             </div>
                                         </div>
