--- a/Views/PI/RecordatorioPI.cshtml
+++ b/Views/PI/RecordatorioPI.cshtml
@@ -98,7 +98,6 @@
                                 columns.AddFor(m => m.id).CellTemplate(@<text>
                                     <div>
                                         @*<button type="button" class="dx-oc-link" onclick="Editar(<%- value %>)"><i class="fa fa-edit"></i></button>*@
-                                        <button type="button" class="dx-oc-link" onclick=""><i class="fa fa-edit"></i></button>
                                     </div>
                                 </text>).Caption("ACCIONES").Width(150);
                                 columns.AddFor(m => m.nombre).CellTemplate(@<text>
@@ -143,6 +142,16 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
+                    <div class="form-group" id="uu_08_c">
+                        <label for="uu_08">Tipo de notificación <font size="4" style="color:#FF0000"> * </font></label>
+                        <select class="select2 form-control input-sm custom-select" id="uu_08" autocomplete="off" style="width: 100%;">
+                            @*<option value="0" disabled selected>Seleccione una opción</option>*@
+                            @foreach (TipoRecordatorio item in ViewBag.tiporecordatorio)
+                            {
+                                <option value="@item.id">@item.nombre</option>
+                            }
+                        </select>
+                    </div>
                     <div class="form-group" id="uu_07_c">
                         <label>Nombre</label>
                         <input type="text" class="form-control input-sm" id="uu_07" autocomplete="off" value="" />
